src/test/deca/context/invalid/cond_if_but_float.deca
// Test la règle 3.29

{
    float cond = 3.14;
    if (cond){

    };
}

// Resultat:
//# TODOTEST  : rule 3.29
